--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
       <h2 class="headings">We put gaming first.</h2>
     </div>
     <div id="searchbar" align="center">
-      <script src="script.js"></script>
+      <script async src="https://cse.google.com/cse.js?cx=003669978326556586863:djxmkowmzj8"></script>
       <div class="gcse-searchbox-only"></div>
     </div>
     <div class="container" align="center">
       <p class="headings">Made for gamers. Designed by gamers.</p>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
