fixed search bar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="gcse-searchbox-only"></div>
     </div>
     <div class="container" align="center">
-      <p class="headings">Made for gamers. Designed by gamers.</p>
+      <p class="headings">Made for gamers. Designed by gamers. A search engine for gaming.</p>
     </div>
     <script src="script.js"></script>
   </body>
