--- a/gse/index.html
+++ b/gse/index.html
@@ -8,15 +8,16 @@
   </head>
   <body>
     <div class="container" align="center">  
-      <h1 class="headings">GS Engine</h1>
-      <h2 class="headings">We put gaming first.</h2>
+      <h1 class="text">GS Engine</h1>
+      <h2 class="text">We put gaming first.</h2>
     </div>
     <div id="searchbar" align="center">
       <script async src="https://cse.google.com/cse.js?cx=003669978326556586863:djxmkowmzj8"></script>
       <div class="gcse-searchbox-only"></div>
     </div>
     <div class="container" align="center">
-      <p class="headings">Made for gamers. Designed by gamers. A search engine for gaming.</p>
+      <p class="text">Made for gamers. Designed by gamers. A search engine for gaming.</p>
+      <a href="https://johndoe434.github.io/gsengine/" class="text">Download the code and make changes here.</a>      
     </div>
     <script src="script.js"></script>
   </body>
