--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>This is a google cse engine designed for gaming</p>
+        <p>This is a google cse engine designed for gaming. Download the code here to make your own changes.</p>
       </section>
     </div>
 
