--- a/gse/index.html
+++ b/gse/index.html
@@ -12,7 +12,7 @@
       <h2 class="text">We put gaming first.</h2>
     </div>
     <div id="searchbar" align="center">
-      <script async src="https://cse.google.com/cse.js?cx=003669978326556586863:djxmkowmzj8"></script>
+      <script async src="SEARCH_LINK"></script>
       <div class="gcse-searchbox-only"></div>
     </div>
     <div class="container" align="center">
