--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Gsengine : ">
+    <meta name="description" content="GSEngine : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Gsengine</title>
+    <title>GSEngine</title>
   </head>
 
   <body>
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/johndoe434/gsengine">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/johndoe434/GSEngine">View on GitHub</a>
 
-          <h1 id="project_title">Gsengine</h1>
+          <h1 id="project_title">GSEngine</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/johndoe434/gsengine/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/johndoe434/gsengine/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/johndoe434/GSEngine/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/johndoe434/GSEngine/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -38,7 +38,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Gsengine maintained by <a href="https://github.com/johndoe434">johndoe434</a></p>
+        <p class="copyright">GSEngine maintained by <a href="https://github.com/johndoe434">johndoe434</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
