--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/johndoe434/GSEngine">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/johndoe434/gsengine">View on GitHub</a>
 
           <h1 id="project_title">GSEngine</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/johndoe434/GSEngine/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/johndoe434/GSEngine/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/johndoe434/gsengine/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/johndoe434/gsengine/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
