--- a/404.html
+++ b/404.html
@@ -1,3 +1,22 @@
-<h1 align="center">404</h1>
-<p align="center">Page not found</p>
-<a href="https://johndoe434.github.io/gsengine/">Go Back</a>
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="GSEngine : ">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>GSEngine</title>
+  </head>
+
+  <body>
+    
+    <h1 align="center">404</h1>
+    <p align="center">Page not found</p>
+    <a href="https://johndoe434.github.io/gsengine/" align="center">Go Back</a>
+    
+  </body>
+
+</html>
