--- a/404.html
+++ b/404.html
@@ -8,14 +8,16 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>GSEngine</title>
+    <title>404 - GSEngine</title>
   </head>
 
   <body>
     
-    <h1 align="center">404</h1>
-    <p align="center">Page not found</p>
-    <a href="https://johndoe434.github.io/gsengine/" align="center">Go Back</a>
+    <div class="404" align="center">
+      <h1>404</h1>
+      <p>Page not found</p>
+      <a href="https://johndoe434.github.io/gsengine/">Go Back</a>
+    </div>
     
   </body>
 
