--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
   <body>
     
     <div class="404" align="center">
-      <h1>404</h1>
+      <h1 id="project-title">404</h1>
       <p>Page not found</p>
       <a href="https://johndoe434.github.io/gsengine/">Go Back</a>
     </div>
