--- a/gse/index.html
+++ b/gse/index.html
@@ -17,7 +17,8 @@
     </div>
     <div class="container" align="center">
       <p class="text">Made for gamers. Designed by gamers. A search engine for gaming.</p>
-      <a href="https://johndoe434.github.io/gsengine/" class="text">Download the code and make changes here.</a>      
+      <a href="https://johndoe434.github.io/gsengine/" class="text">Download the code and make changes here.</a>
+      <p class="text">© Syntax Corp.</p>      
     </div>
   </body>
 </html>
